# rl-adaptive-filtering

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
results/: full_evaluation.csv  realworld_ecg.csv  realworld_ecg_multi.csv  realworld_speech.csv  rl_evaluation_v4.csv  snr_sweep.csv
results/ablations/: ablations_per_seed.csv  ablations_summary.csv
results/baselines/: baselines_per_seed.csv  baselines_summary.csv
results/cnn/: cnn_matrix.csv  cnn_summary.csv
results/ppo_meta_v5/: train_records_meta_seed242.csv  train_records_meta_seed342.csv  train_records_meta_seed42.csv  train_records_meta_seed442.csv
results/ppo_meta_v5/tb/meta_seed142_1/: events.out.tfevents.1777851170.thinkbook.707991.1
results/ppo_meta_v5/tb/meta_seed142_2/: events.out.tfevents.1777851218.thinkbook.717259.0
results/ppo_mlp_seeds_full/: ppo_mlp_all_seeds.csv  ppo_mlp_seed21.csv  ppo_mlp_seed42.csv  ppo_mlp_seed7.csv
scripts/: eval_all.py  eval_ecg_multi.py  eval_realworld.py  make_paper_figures.py  run_ablations.py  run_baselines.py  run_cnn_baseline.py  smoke_test.py  train_rl.py
src/agents/: __init__.py  eval_ppo.py  train_ppo.py
src/envs/: __init__.py  adaptive_filter_env.py
src/eval/: __init__.py  evaluation.py  metrics.py  plots.py  realworld_runner.py  stats.py  style.py
src/filters/: __init__.py  base.py  lms.py  rls.py
src/noise/: families.py
src/signals/: generators.py
src/supervised/: cnn.py
tests/: test_env.py  test_filters.py  test_signals_noise.py
(+5 files in other folders)
